[package]
name = "deno_cli_snapshots"
version = "0.0.3"
license = "MIT"
authors = ["Ryan Dahl <ry@tinyclouds.org>"]
edition = "2018"
description = "Provides snapshots for the deno CLI"
repository = "https://github.com/ry/deno_typescript"

[lib]
path = "lib.rs"

[dev-dependencies]
deno = { path = "../core" }

[build-dependencies]
deno_typescript = { path = "../deno_typescript", version = "0.0.3" }

