[package]
name = "deno_cli_snapshots"
version = "0.17.0"
license = "MIT"
authors = ["Ryan Dahl <ry@tinyclouds.org>"]
edition = "2018"
description = "Provides snapshots for the deno CLI"
repository = "https://github.com/ry/deno_typescript"

[lib]
path = "lib.rs"

[dev-dependencies]
deno = { path = "../core" }

[build-dependencies]
deno_typescript = { path = "../deno_typescript" }
deno_bundle_util = { path = "../bundle_util", version = "0.16.0" }
deno_ops_fs_bundle = { path = "../ops/fs/bundle", version = "0.16.0" }
deno_dispatch_json_bundle = { path = "../dispatch_json/bundle", version = "0.16.0" }
