[package]
name = "deno_compiler"
version = "0.49.0"
license = "MIT"
description = "ESM and TypeScript dependency analysis, compiling, bundling and transforming for Deno."
repository = "https://github.com/denoland/deno"
authors = ["the Deno authors"]
edition = "2018"

exclude = [
  "typescript/tests/*",
  "typescript/src/*",
  "typescript/scripts/*",
  "typescript/doc/*",
  "typescript/lib/*/*.json",
]

[lib]
path = "lib.rs"

[dependencies]
base64 = "0.12.3"
bytecount = "0.6.0"
deno_core = { path = "../core", version = "0.54.0" }
either = "1.6.0"
futures = "0.3.5"
indexmap = "1.5.1"
jsonc-parser = "0.12.2"
lazy_static = "1.4.0"
regex = "1.3.9"
ring = "0.16.15"
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
sourcemap = "6.0.1"
swc_common = { version = "=0.10.0", features = ["sourcemap"] }
swc_ecma_transforms = { version = "=0.22.1", features = ["react"] }
swc_ecmascript = { version = "=0.6.1", features = ["codegen", "parser", "transforms", "utils", "visit"] }
termcolor = "1.1.0"
url = "2.1.1"

[dev-dependencies]
tempfile = "3.1.0"
tokio = { version = "0.2.22", features = ["full"] }
